--- a/assets/other/devtoolsplayground.html
+++ b/assets/other/devtoolsplayground.html
@@ -3,7 +3,16 @@ layout: default
 title: DevToolsPlayground
 ---
 <br><br>
-<h2 id="Right Click on me and select 'Edit as HTML'">This is some text to edit</h2>
-<i>^ Right Click on this an select Inspect ^_</i>
-
-<a href="right-click/then/attributes/then/edit-href">Click me</a>
+<p>
+    <h2 id="Right Click on me and select 'Edit as HTML'">This is some text to edit</h2>
+</p>
+<br><br>
+<p>
+    <h2>
+        <a href="right-click/then/edit-attribute">This is a link to edit</a>
+    </h2>
+</p>
+<br><br>
+<p>
+    <img src="/assets/images/imagetoedit.png" style="background-color: white;" width="300px"/>
+</p>
