--- a/initslash.html
+++ b/initslash.html
@@ -42,6 +42,7 @@ permalink: /init
             border-radius: 7px;
             text-decoration: none;
             font-size: 20px;
+            width: 220px;
         }
         a {
             color: white;
