--- a/initslash.html
+++ b/initslash.html
@@ -53,10 +53,13 @@ permalink: /init
 <body>
     <div id="main">
         <img src="/assets/images/logo.png" width="250px"/><br><br>
-        <a class="button" href="/init/lt">Launch site introduction</a><br><br>
-        <a href="/">Skip to site</a>
+        Loading...
     </div>
 
 </body>
 
 </html>
+
+<script>
+    window.location = "/init/lt"
+</script>
