--- a/splash.html
+++ b/splash.html
@@ -102,10 +102,14 @@ permalink: /init/lt
             float: left;
             transition: 1s;
         }
+        a {
+            color: white;
+        }
     </style>
 </head>
 
 <body>
+    <a href="/">Skip &gt;</a>
     <div id="main">
         <div id="text-box" class="textbox-position-1">Hi! I'm Isaac.<br>A young coder from Britian.</div>
         <img id="laptop" src="/assets/images/laptop.png" class="hidden" width="300px">
@@ -120,6 +124,7 @@ permalink: /init/lt
 
     <script defer>
         var id = null;
+        localStorage.previsit = true;
         function sequence1() {
             var elem = document.getElementById("text-box");
             var pos = 200;
@@ -148,7 +153,7 @@ permalink: /init/lt
         }
         window.setTimeout(sequence1, 1800, false);
         function finish() {
-            localStorage.previsit = true;
+            
             window.location = "/";
         }
     </script>
